Sun Jun 21 02:20:22 BST 2009  Colin Watson  <cjwatson@debian.org>

	* libdb/db_lookup.c (dblookup): In exact mode, make sure extensions
	  match exactly, rather than merely that the extension found is a
	  prefix of that which was requested.

Sun Jun 21 02:00:31 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/ult_src.c (ult_src): Keep a copy of base before passing it to
	  decompress_open, as that function doesn't keep its own copy and we
	  may change base later.

Sat Jun 20 21:26:02 BST 2009  Colin Watson  <cjwatson@debian.org>

	* libdb/db_store.c (replace_if_necessary): Prevent misleading
	  debugging message: don't say "ignoring differing ids" if the new
	  id was preferred and we attempted a replacement.

Sat May 30 12:50:44 BST 2009  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_start): Check the return value of nice.

	* include/manconfig.h.in (create_tempdir): Warn if the result is not
	  used.
	* lib/tempfile.c (create_tempdir): Check the return value of
	  mkdtemp.
	* src/man.c (format_display): Check the return value of
	  create_tempdir.

Sat May 30 13:37:58 CEST 2009  Colin Watson  <cjwatson@debian.org>

	* src/man.c (make_roff_command): Initialise page_encoding.

Wed May 13 18:28:44 BST 2009  Colin Watson  <cjwatson@debian.org>

	* gnulib: Upgrade to 20090501.
	* tools/config.guess, tools/config.sub: Update.

Wed Apr 22 15:50:51 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l (lt_name): Add.

Wed Apr 15 00:34:06 BST 2009  Colin Watson  <cjwatson@debian.org>

	* man/it/man1/whatis.man1 (STATI D'USCITA): Fix section heading
	  (formerly "STATI D?USCITA") to match man(1) and apropos(1).
	  Reported by Ken Moffat.

Wed Apr 15 00:33:16 BST 2009  Colin Watson  <cjwatson@debian.org>

	* man/check-man: Set MAN_KEEP_FORMATTING=1, since a UTF-8-aware col
	  (such as that in util-linux-ng) will object to being asked to
	  process non-ASCII text under LC_ALL=C. Reported by Ken Moffat.
	* docs/NEWS: Document this.
