@@ -1,3 +1,8 @@
+Sun Jun 21 02:29:24 BST 2009  Colin Watson  <cjwatson@debian.org>
+
+	* libdb/db_lookup.c (dblookup): As previous change, but for the
+	  multi key case as well.
+
 Sun Jun 21 02:20:22 BST 2009  Colin Watson  <cjwatson@debian.org>
 
 	* libdb/db_lookup.c (dblookup): In exact mode, make sure extensions
